fix: consistent spacing between panels (#2817)
* fix: consistent spacing between panels

* refactor: page padding variable

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,6 +6,7 @@ $font-size-xl: 20px;
 // Layout components
 $border-radius: 8px;
 $default-padding: 16px;
+$page-padding-vertical: 24px;
 $default-background-blur: blur(32px);
 $default-gap: 8px;
 $border-color: #686e7d3d;
